syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";

import "entityPb.proto";
import "summaryPb.proto";

enum PrivilegeTypeEnum {
    UNKNOWN_PREVILAGE=0;
    NORMAL=1;
    ADMIN =2;
}


message CustomerPb {
    EntityPb dbInfo = 1;
    PrivilegeTypeEnum privilege =2;
}

message CustomerSearchRequestPb {
    PrivilegeTypeEnum privilege =1;
}

message CustomerSearchResponsePb {
    SummaryPb summary = 1;
    repeated CustomerPb results = 2;
}



