syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";


enum RequestMethodEnum {
    UNKNOWN_METHOD = 0;
    GET = 1;
    POST = 2;
    PUT = 3;
}


